# car-scraper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GRAPHS.md  README.md  docker-compose.yml  lexus-lc.md  main.py  pyproject.toml  run_scraper.sh  setup.cfg  targets.json
.github/workflows/: daily-scrape.yml  pages.yml  test.yml
dashboard/: Dockerfile  app.py  requirements.txt
data/: lexus-lc-test.csv  lexus-lc-test.json  lexus-lc.csv  lexus-lc.json
data/bmw-i8/: bmw-i8.csv  bmw-i8.json  listings_history.json
data/bmw-i8/individual_listings/: id_mapping.json
data/individual_listings/: id_mapping.json  listings_history.csv
data/lexus-lc/: lexus-lc.csv  lexus-lc.json  listings_history.json
data/lexus-lc/individual_listings/: id_mapping.json
data/mazda-mx-5/: mazda-mx-5.json
data/toyota-gr86/: toyota-gr86.json
data/toyota-supra/: toyota-supra.json
plots/: index.html
scripts/: clean_data.py  migrate_to_simplified.py  test_e2e_manual.sh  test_e2e_simple.py
src/: main.py
src/car_scraper/: __init__.py  config.py  facets.py  report_template.html  reporting.py
src/car_scraper/models/: __init__.py
src/car_scraper/plotters/: __init__.py  individual_plots.py  legacy_plots.py  year_analysis_plots.py
src/car_scraper/scrapers/: __init__.py  advertisement_fetcher.py  autoplac_search.py  car_scraper.py  otomoto_search.py
src/car_scraper/storage/: __init__.py  id_mapping.py  individual_listings.py  simplified_listings.py  time_series.py
src/car_scraper/utils/: __init__.py  data_processor.py  demo.py  logger.py
tests/: __init__.py  test_otomoto_search.py  test_storage_guards.py
tests/integration/: test_e2e_simplified_storage.py
