[tool.poetry]
name = "car-scraper"
version = "0.1.0"
description = "Car scraper for otomoto.pl with time series tracking"
authors = ["Szymon Piskorz <sim.piskorz@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.0"
click = "^8.1.0"
httpx = "^0.25.0"
pandas = "^2.0.0"
matplotlib = "^3.6.0"
lxml = "^4.9.0"
numpy = "^1.24.0"
loguru = "^0.7.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.5.0"
ruff = "^0.6.0"
pre-commit = "^3.4.0"
bandit = "^1.7.5"

[tool.poetry.scripts]
car-scraper = "main:cli"

# Ruff replaces black + isort + flake8 (+ plugins): one fast linter/formatter.
[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["data", "plots", ".venv", "build", "dist"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line length is enforced by the formatter
    "B008",   # function calls in argument defaults (click options)
    "B007",   # unused loop var (common in dict.items() iteration)
    "UP038",  # isinstance(x, (a, b)) is clearer than the X | Y form
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]          # re-exports
"main.py" = ["E402"]              # imports after sys.path bootstrap
"tests/*" = ["B011", "SIM"]

[tool.mypy]
python_version = "3.10"
mypy_path = "."
plugins = ["pydantic.mypy"]
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601", "B110", "B112", "B311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
